--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -3224,4 +3224,6 @@ en:
       back: "Back"
       next: "Next"
       step: "Step %{current} of %{total}"
+      upload: "Upload"
+      uploading: "Uploading..."
 
