--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -3227,3 +3227,11 @@ en:
       upload: "Upload"
       uploading: "Uploading..."
 
+      invites:
+        add_user: "add"
+        roles:
+          admin: "Admin"
+          moderator: "Moderator"
+          regular: "Regular User"
+
+
